--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
       />
       <button type="submit">Search</button>
     </form>
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
 
