--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
+    <button type="button" class="load-more">Load more</button>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
 
